fixing insta spacing on home page

--- a/css/brooklyn-holiday-bazaar.webflow.css
+++ b/css/brooklyn-holiday-bazaar.webflow.css
@@ -582,13 +582,16 @@ strong {
   display: flex;
   width: 400px;
   margin-top: -24px;
-    margin-bottom: 30px;
   margin-right: auto;
   margin-left: auto;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
+}
+.home-follow-insta {
+    margin-top: -40px !important;
+    margin-bottom: 60px !important;
 }
 
 .press-grid {
